# kubernetes-engine-samples

.github/: CODEOWNERS
.github/workflows/: ai-ml-ad-vertex.yml  cost-optimization-hpa-config-recommender-ci.yml  (+2 more)
cost-optimization/hpa-config-recommender/: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg
cost-optimization/hpa-config-recommender/deploy/: main.tf  variables.tf
cost-optimization/hpa-config-recommender/docs/: README.md  notebook.ipynb  notebook.nb.py
cost-optimization/hpa-config-recommender/src/: README.md
cost-optimization/hpa-config-recommender/src/hpaconfigrecommender/: plan_workload_simulation.py  read_workload_startuptime.py  read_workload_timeseries.py  run_workload_simulation.py
cost-optimization/hpa-config-recommender/src/hpaconfigrecommender/utils/: config.py  log.py  models.py
cost-optimization/hpa-config-recommender/tests/: test_plan_workload_simulation.py  test_read_workload_startuptime.py  test_read_workload_timeseries.py  test_run_workload_simulation.py
cost-optimization/hpa-config-recommender/tests/test_files/: test_id_10_dataframe.csv  test_id_11_dataframe.csv  test_id_12_dataframe.csv  test_id_14_dataframe.csv  test_id_15_dataframe.csv  test_id_1_dataframe.csv  test_id_2_dataframe.csv  test_id_3_dataframe.csv  test_id_4_dataframe.csv  test_id_5_dataframe.csv  test_id_5b_dataframe.csv  test_id_6_dataframe.csv  test_id_7_dataframe.csv  test_id_7b_dataframe.csv  test_id_7c_dataframe.csv  test_id_8_dataframe.csv  test_id_9_dataframe.csv  test_workload_data.csv
(+210 files in other folders)
